fixing here and there

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <button id="start-btn">START GAME</button>
     </header>
     <!--CREATE a setion for meal display  that is initially hiddem and also collect guess-->
-    <section id="meal-dispaly" class="hidden">
+    <section id="meal-display" class="hidden">
         <!--image of a randomly fetched meal from THEMEALDB-->
         <img id="meal-img"  src="" alt="Mystrey  meal image" />
 
@@ -44,7 +44,7 @@
         <!--Buttton to restart the game after a succesfull 3 rounds attempt-->
         <button id="restart-btn">RESTART GAME</button>
     </section>
-    <!--link to .js to control the game logic-->
-    <script src="index.js"></script>
 </body>
+ <!--link to .js to control the game logic-->
+ <script src="index.js" defer></script>
 </html>
