--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <!--image of a randomly fetched meal from THEMEALDB-->
         <img id="meal-img"  src="" alt="Mystrey  meal image" />
 
-        <!--list of ingridients to be stored in the <ul>-->
-        <ul id="ingridients-list"></ul>
+        <!--list of ingredient to be stored in the <ul>-->
+        <ul id="ingredient-list"></ul>
 
         <!--take guessing user inputabout the category -->
         <input type="text" id="userS-guess" placeholder="Guess the category..." />
