--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
         <!--list of ingredient to be stored in the <ul>-->
         <ul id="ingredient-list"></ul>
 
+        <!--show meal full name-->
+        <h3  id="meal-name" class="meal-title"></h3>
+
+        <!--paragraph to show area hint-->
+        <p id="hint"></p>
+
         <!--take guessing user inputabout the category -->
         <input type="text" id="userS-guess" placeholder="Guess the category..." />
         
